Logaritmo de busqueda, schedule programada, frontend hecho